[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xnoxs_fetcher"
version = "3.0.0"
description = "Advanced TradingView historical and live data fetcher"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "developerxnoxs", email = "developerxnoxs@gmail.com"}
]
keywords = [
    "tradingview",
    "trading",
    "stocks",
    "crypto",
    "cryptocurrency",
    "forex",
    "market-data",
    "historical-data",
    "live-data",
    "ohlcv",
    "pandas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "websocket-client>=1.0.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/developerxnoxs/xnoxs_fetcher"
Documentation = "https://github.com/developerxnoxs/xnoxs_fetcher#readme"
Repository = "https://github.com/developerxnoxs/xnoxs_fetcher"
"Bug Tracker" = "https://github.com/developerxnoxs/xnoxs_fetcher/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
